<package>
  <name>pick_objects</name>
  <version>0.1.0</version>
  <description>pick_objects</description>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <license>BSD</license>
  <author>Luciano Silveira</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <export>
  </export>
</package>
