<?xml version="1.0"?>
<package format="2">
  <name>wall_follower</name>
  <version>0.1.0</version>
  <description>wall follower node</description>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
</package>